# HFT-Crypto-API

./: .gitignore  .pylintrc  README.md  demos.ipynb  example.py  ftx_examples.py  huobi_examples.py  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml
examples/trading_bot/: backtesting.ipynb  bot.py  bot_utils.py  config.py  requirements.txt
ftx/: __init__.py
hft_api/huobi/: __init__.py
hftcryptoapi/: __init__.py
hftcryptoapi/bitmart/: Bitmart.py  BitmartService.py  MarketDataAgent.py  api_client.py  bitmart_errors.py  bitmart_exceptions.py  bitmart_objects.py  bitmart_utils.py  bitmart_websockets.py  bm_logging.py  client_keys.py  connector.py  constants.py  exceptions.py  ws_base.py
hftcryptoapi/bitmart/data/: __init__.py  constants.py  rest.py  ws.py
hftcryptoapi/bitmart/docs/source/: bitmart.rst  conf.py  index.rst
hftcryptoapi/common/: common_types.py  constants.py  enums.py  exceptions.py  models.py  requests.py  rest.py  websockets.py
hftcryptoapi/data/historical/: utils.py
